# pkg/api/openapi/model_stack_release_live_status.go
@@ -1,0 +1,257 @@
+/*
+stackdome-api-server
+
+stackdome-api-server
+
+API version: 0.0.1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// StackReleaseLiveStatus struct for StackReleaseLiveStatus
+type StackReleaseLiveStatus struct {
+	Health           *ReleaseHealth                  `json:"health,omitempty"`
+	Resources        *map[string]StackResourceStatus `json:"resources,omitempty"`
+	Conditions       []Condition                     `json:"conditions,omitempty"`
+	TargetRevision   *string                         `json:"target_revision,omitempty"`
+	ObservedRevision *string                         `json:"observed_revision,omitempty"`
+}
+
+// NewStackReleaseLiveStatus instantiates a new StackReleaseLiveStatus object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewStackReleaseLiveStatus() *StackReleaseLiveStatus {
+	this := StackReleaseLiveStatus{}
+	return &this
+}
+
+// NewStackReleaseLiveStatusWithDefaults instantiates a new StackReleaseLiveStatus object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewStackReleaseLiveStatusWithDefaults() *StackReleaseLiveStatus {
+	this := StackReleaseLiveStatus{}
+	return &this
+}
+
+// GetHealth returns the Health field value if set, zero value otherwise.
+func (o *StackReleaseLiveStatus) GetHealth() ReleaseHealth {
+	if o == nil || o.Health == nil {
+		var ret ReleaseHealth
+		return ret
+	}
+	return *o.Health
+}
+
+// GetHealthOk returns a tuple with the Health field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *StackReleaseLiveStatus) GetHealthOk() (*ReleaseHealth, bool) {
+	if o == nil || o.Health == nil {
+		return nil, false
+	}
+	return o.Health, true
+}
+
+// HasHealth returns a boolean if a field has been set.
+func (o *StackReleaseLiveStatus) HasHealth() bool {
+	if o != nil && o.Health != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetHealth gets a reference to the given ReleaseHealth and assigns it to the Health field.
+func (o *StackReleaseLiveStatus) SetHealth(v ReleaseHealth) {
+	o.Health = &v
+}
+
+// GetResources returns the Resources field value if set, zero value otherwise.
+func (o *StackReleaseLiveStatus) GetResources() map[string]StackResourceStatus {
+	if o == nil || o.Resources == nil {
+		var ret map[string]StackResourceStatus
+		return ret
+	}
+	return *o.Resources
+}
+
+// GetResourcesOk returns a tuple with the Resources field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *StackReleaseLiveStatus) GetResourcesOk() (*map[string]StackResourceStatus, bool) {
+	if o == nil || o.Resources == nil {
+		return nil, false
+	}
+	return o.Resources, true
+}
+
+// HasResources returns a boolean if a field has been set.
+func (o *StackReleaseLiveStatus) HasResources() bool {
+	if o != nil && o.Resources != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetResources gets a reference to the given map[string]StackResourceStatus and assigns it to the Resources field.
+func (o *StackReleaseLiveStatus) SetResources(v map[string]StackResourceStatus) {
+	o.Resources = &v
+}
+
+// GetConditions returns the Conditions field value if set, zero value otherwise.
+func (o *StackReleaseLiveStatus) GetConditions() []Condition {
+	if o == nil || o.Conditions == nil {
+		var ret []Condition
+		return ret
+	}
+	return o.Conditions
+}
+
+// GetConditionsOk returns a tuple with the Conditions field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *StackReleaseLiveStatus) GetConditionsOk() ([]Condition, bool) {
+	if o == nil || o.Conditions == nil {
+		return nil, false
+	}
+	return o.Conditions, true
+}
+
+// HasConditions returns a boolean if a field has been set.
+func (o *StackReleaseLiveStatus) HasConditions() bool {
+	if o != nil && o.Conditions != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetConditions gets a reference to the given []Condition and assigns it to the Conditions field.
+func (o *StackReleaseLiveStatus) SetConditions(v []Condition) {
+	o.Conditions = v
+}
+
+// GetTargetRevision returns the TargetRevision field value if set, zero value otherwise.
+func (o *StackReleaseLiveStatus) GetTargetRevision() string {
+	if o == nil || o.TargetRevision == nil {
+		var ret string
+		return ret
+	}
+	return *o.TargetRevision
+}
+
+// GetTargetRevisionOk returns a tuple with the TargetRevision field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *StackReleaseLiveStatus) GetTargetRevisionOk() (*string, bool) {
+	if o == nil || o.TargetRevision == nil {
+		return nil, false
+	}
+	return o.TargetRevision, true
+}
+
+// HasTargetRevision returns a boolean if a field has been set.
+func (o *StackReleaseLiveStatus) HasTargetRevision() bool {
+	if o != nil && o.TargetRevision != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetTargetRevision gets a reference to the given string and assigns it to the TargetRevision field.
+func (o *StackReleaseLiveStatus) SetTargetRevision(v string) {
+	o.TargetRevision = &v
+}
+
+// GetObservedRevision returns the ObservedRevision field value if set, zero value otherwise.
+func (o *StackReleaseLiveStatus) GetObservedRevision() string {
+	if o == nil || o.ObservedRevision == nil {
+		var ret string
+		return ret
+	}
+	return *o.ObservedRevision
+}
+
+// GetObservedRevisionOk returns a tuple with the ObservedRevision field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *StackReleaseLiveStatus) GetObservedRevisionOk() (*string, bool) {
+	if o == nil || o.ObservedRevision == nil {
+		return nil, false
+	}
+	return o.ObservedRevision, true
+}
+
+// HasObservedRevision returns a boolean if a field has been set.
+func (o *StackReleaseLiveStatus) HasObservedRevision() bool {
+	if o != nil && o.ObservedRevision != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetObservedRevision gets a reference to the given string and assigns it to the ObservedRevision field.
+func (o *StackReleaseLiveStatus) SetObservedRevision(v string) {
+	o.ObservedRevision = &v
+}
+
+func (o StackReleaseLiveStatus) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if o.Health != nil {
+		toSerialize["health"] = o.Health
+	}
+	if o.Resources != nil {
+		toSerialize["resources"] = o.Resources
+	}
+	if o.Conditions != nil {
+		toSerialize["conditions"] = o.Conditions
+	}
+	if o.TargetRevision != nil {
+		toSerialize["target_revision"] = o.TargetRevision
+	}
+	if o.ObservedRevision != nil {
+		toSerialize["observed_revision"] = o.ObservedRevision
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableStackReleaseLiveStatus struct {
+	value *StackReleaseLiveStatus
+	isSet bool
+}
+
+func (v NullableStackReleaseLiveStatus) Get() *StackReleaseLiveStatus {
+	return v.value
+}
+
+func (v *NullableStackReleaseLiveStatus) Set(val *StackReleaseLiveStatus) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableStackReleaseLiveStatus) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableStackReleaseLiveStatus) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableStackReleaseLiveStatus(val *StackReleaseLiveStatus) *NullableStackReleaseLiveStatus {
+	return &NullableStackReleaseLiveStatus{value: val, isSet: true}
+}
+
+func (v NullableStackReleaseLiveStatus) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableStackReleaseLiveStatus) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
